--- a/manifest.json
+++ b/manifest.json
@@ -40,6 +40,7 @@
     "functions": {
         "enviarEmail": {
             "name": "Enviar Email - SMTP",
+            "icon": "Mail",
             "script": "dist/enviarEmail.js",
             "description": "Envia um email via SMTP, Gmail ou Outlook",
             "category": "comunicacao",
