--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,18 @@
   "auth": {
     "description": {
       "title": "Configurações de Email (SMTP)",
-      "body": "Configure as credenciais para envio de emails via SMTP.",
-      "link": ""
+      "body": "Para conectar sua caixa de e-mails, basta acessar as configurações da sua conta e então acessar as configurações de IMAP/POP para abrir as informações do servidor (domínio e porta).
+Caso sua conta não seja Google ou Microsoft, a lógica é a mesma: acesse as configurações da sua conta e busque pelas informações do servidor para extrair essas informações.",
+      "link": [
+        {
+          "label": "Acessar Gmail",
+          "link": "https://www.hostinger.com/br/tutoriais/aprenda-a-utilizar-o-smtp-google"
+        },
+        {
+          "label": "Acessar Outlook",
+          "link": "https://support.microsoft.com/pt-br/office/configura%C3%A7%C3%B5es-pop-imap-e-smtp-para-outlook-com-d088b986-291d-42b8-9564-9c414e2aa040"
+        } 
+      ]
     },
     "params": [
       {
