--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         {
           "label": "Acessar Outlook",
           "link": "https://support.microsoft.com/pt-br/office/configura%C3%A7%C3%B5es-pop-imap-e-smtp-para-outlook-com-d088b986-291d-42b8-9564-9c414e2aa040"
-        } 
+        }
       ],
       "footer": "Caso sua conta não seja Google ou Microsoft, a lógica é a mesma: acesse as configurações da sua conta e busque pelas informações do servidor para extrair essas informações."
     },
@@ -62,6 +62,7 @@
         "mensagem": "",
         "cc": "",
         "bcc": "",
+        "anexos": [],
         "html": false,
         "provedor": "smtp"
       },
@@ -89,6 +90,14 @@
           "required": true,
           "label": "Mensagem",
           "description": "Conteúdo da mensagem"
+        },
+        {
+          "name": "anexos",
+          "type": "array",
+          "inputType": "file",
+          "required": false,
+          "label": "Anexar arquivo",
+          "description": "Arquivo(s) para anexar ao email"
         },
         {
           "name": "cc",
